# BinaryAnalysisMCPs

./: LICENSE  README.md
ida-mcp/: .gitignore  README.md  pyproject.toml
ida-mcp/ida_mcp/: main.py
ida-mcp/ida_mcp/tools/: basic.py  functions.py  utils.py  variables.py  xref.py
speakeasy-mcp/: .gitignore  README.md  pyproject.toml
speakeasy-mcp/.devcontainer/: Dockerfile  devcontainer.json
speakeasy-mcp/speakeasy_mcp/: main.py
speakeasy-mcp/speakeasy_mcp/se_ext/: prehook.py
speakeasy-mcp/src/se_ext/: __init__.py  enterhook.py  hooks.py
x64dbg-mcp/: .gitignore  README.md  pyproject.toml
x64dbg-mcp/src/: main.py
x64dbg-mcp/x64dbg_mcp/: main.py
