[project]
name = "x64dbg-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.3",
    "loguru>=0.7.3",
    "pefile>=2024.8.26",
    "x64dbg-automate==0.4.2",
]

[project.scripts]
x64dbg-mcp = "x64dbg_mcp.main:main"
